<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sitiosCercanosOption"
            android:icon="@drawable/sitioscercanosicon"
            android:title="@string/sitiosCercanosOption" />
        <item
            android:id="@+id/anyadirSitio"
            android:icon="@drawable/add"
            android:title="@string/anyadirSitio" />
        <item
            android:id="@+id/favoritosOption"
            android:icon="@drawable/favorito"
            android:title="@string/favoritosOption" />
        <item
            android:id="@+id/mapaBBDD"
            android:icon="@drawable/mapaicono"
            android:title="@string/mapaBBDD" />
    </group>

</menu>
