<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    tools:context="com.example.sergio.reencuadrar.Personalizacion">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTransparent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198">

        <TextView
            android:id="@+id/textViewNombrePersonalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/app_name"
            android:textColor="#ce3232"
            android:textSize="40sp"
            android:typeface="serif" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILNombreUsr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextNombrePers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:hint="@string/anyadirNombre"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILEdadUsr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEdadPers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:ems="10"
                android:maxLength="3"
                android:hint="@string/anyadirEdad"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/grupoGenero"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing">

            <RadioButton
                android:id="@+id/radioButtonChicoPers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chico"
                android:textColor="#ce3232"
                android:textSize="40dp" />

            <RadioButton
                android:id="@+id/radioButtonChicaPers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chica"
                android:textColor="#ce3232"
                android:textSize="40dp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/buttonGuardarPersonalizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:width="@dimen/nav_header_height"
        android:background="@drawable/buttonshape"
        android:onClick="guardar"
        android:text="@string/guardar"
        android:textColor="@color/colorTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonCancelarPersonalizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:width="@dimen/nav_header_height"
        android:background="@drawable/buttonshape"
        android:onClick="volver"
        android:text="@string/cancelar"
        android:textColor="@color/colorTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
